# majordome-utilities

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: gnuplot.rs  lib.rs  prelude.rs  system.rs  text.rs
src/majordome_utilities/: __init__.py
